static/css/style.css
body {
    font-family: 'Signika', 'calibri';
    font-size: 18px;
    background-color: #ffffff;
    color: #444;
}

/* ------------------------------------------------------ SHARED STYLE ------ */

h1,
h2,
h3,
h4,
h5,
h6 {
    letter-spacing: .1em;
}

h1,
h2,
h3 {
    color: #ee6e73;
    margin: 5rem 0 3rem 0;
}

h4 {
    margin: 3rem 0 2rem 0;
}

.flexbox {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

/* ------------------------------------------------------------ HEADER ------ */

nav ul a,
.button-collapse {
    color: #444;
}

.nav-sizing {
    height: 100px;
}

p {
    line-height: 2rem;
}

@media only screen and (min-width: 601px) {
    nav,
    nav .nav-wrapper i,
    nav a.button-collapse,
    nav a.button-collapse i {
        line-height: 100px;
    }
}

/* -------------------------------------------------------------- FOOTER ------ */

ul:not(.browser-default)>li {
    list-style-type: none;
    display: inline;
}

.icon-style {
    font-size: 30px;
    margin-right: 30px;
    color: #444;
}

.page-footer {
    margin: 0;
}

footer ul {
    margin-bottom: 30px
}

#copyright-color {
    color: #444;
}

i.fa.fa-facebook.icon-style:hover {
    color: #3b5998;
}

i.fa.fa-instagram.icon-style:hover {
    color: #C13584;
}

i.fa.fa-youtube-play.icon-style:hover {
    color: #FF0000;
}

i.fa.fa-pinterest-p.icon-style:hover {
    color: #c8232c;
}

i.fa.fa-twitter.icon-style:hover {
    color: #00acee;
}

/* -------------------------------------------------------------- HOME ------ */

img.parallax-img-size {
    height: 100vh;
}

.header-img {
    max-width: 100%;
    padding: 25px;
}

.text-parallax {
    background-color: white;
    color: black;
}

a.anchor-title {
    color: #444;
}

.anchor-title:hover {
    color: #ee6e73;
}

.border-bottom {
    width: 60px;
    transition-property: width;
    transition-duration: 0.5s;
    transition-timing-function: ease-in-out;
}

.anchor-title:hover .border-bottom {
    width: 120px;
}

/* ----------------------------------------------------------- RECIPES ------ */

.card-img {
    max-width: 100%;
    padding: 25px;
    height: 250px;
    width: 250px;
    object-fit: cover;
}

.headline-carousel {
    margin-bottom: 20px;
    color: #ee6e73;
}

.carousel.initialized {
    margin-top: -50px;
}

.category-box {
    margin: auto !important;
}

.button-margins {
    margin-bottom: 10px;
}

/* ------------------------------------------------------------- ABOUT ------ */

.container-section {
    padding: 20px 30px;
    margin: 50px auto;
}

.grey-bg {
    background-color: rgba(51,51,51,0.08);
}

p.small {
    font-size: 14px;
}

/* ------------------------------------------------ RECIPE DESCRIPTION ------ */

#recipe-indicator {
    margin-bottom: 40px;
}

i.fa.fa-shopping-basket {
    font-size: 25px;
}

ul.list-styling>li {
    list-style-type: disc;
    display: list-item;
}

ul.list-styling {
    padding-left: 6rem;
}

i.fa.fa-shopping-basket {
    color: #ee6e73;
}

a.btn.btn-floating.pulse.modal-trigger {
    margin-right: 20px;
}

a.icon-margin {
    margin-right: 10px;
}

/* ---------------------------------------------------- ADD NEW RECIPE ------ */

.add-spacing {
    margin: 50px auto;
}

.recipe-elements {
    padding: 0px 25px;
}

button#add-instructions,
button#add-ingredients {
    float: right;
}

.btn,
.btn-large {
    background-color: #ee6e73;
}

.btn:hover,
.btn-large:hover {
    background-color: #ee6e73;
}

textarea.materialize-textarea.validate+label::after {
    top: calc(100% - 12px);
    margin-top: 10px;
}

textarea.materialize-textarea {
    padding: 0;
}

/* ---------------------------------------------------------- 404 PAGE ------ */

.not-found-gif {
    margin-top: 10px;
}

.not-found-icon {
    color: #ee6e73;
}

.not-found-title {
    font-weight: 800;
}

/* --------------------------------------------- FLASK PAGINATION STYLE ------ */

.pagination-page-info {
    padding: .6em;
    padding-left: 0;
    width: 40em;
    margin: .5em;
    margin-left: 0;
    font-size: 18px;
    text-transform: uppercase;
}
.pagination-page-info b {
    color: #444;
    background: #ee6e73;
    padding-left: 2px;
    padding: .1em .25em;
    font-size: 150%;
}

/* -------------------------------DEFAULT SETTINGS / MATERIALIZE THEME ------ */

.parallax-container {
    min-height: 380px;
    line-height: 0;
    height: auto;
    color:#ffffff;
}

.parallax-container .section {
    width: 100%;
}

@media only screen and (max-width: 992px) {
    .parallax-container .section {
        position: absolute;
        top: 40%;
    }
    #index-banner .section {
        top: 10%;
    }
}

@media only screen and (max-width: 600px) {
    #index-banner .section {
        top: 0;
    }
}

.icon-block {
    padding: 0 15px;
}

.icon-block .material-icons {
    font-size: inherit;
}

/* -------------------------------------------------------- PRINT AREA ------ */

@media print {
    body * {
        visibility: hidden;
    }
    #section-to-print img {
        width: 250px;
        height: auto;
    }
    #section-to-print h3,
    #section-to-print h5 {
        font-weight: 600;
    }
    #section-to-print, #section-to-print * {
        font-size: 13px !important;
        visibility: visible;
    }
    #section-to-print {
        position: absolute;
        margin-top: 0px;
        left: 0;
        top: 0;
        right: 0;
    }   
    .dont-print {
        display: none;
    }
}

